--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 ash = "0.38.0"
+backtrace = "0.3.74"
 env_logger = "0.11.6"
 log = "0.4.25"
-vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", branch = "master" }
+thiserror = "1"
 
 [profile.dev]
 opt-level = 1
