--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,11 @@
-[package]
-name = "vendec"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "2"
+members = ["crates/libva", "crates/libva-sys", "crates/vendec"]
 
-[dependencies]
-anyhow = "1.0.95"
-ash = "0.38.0"
-async-executor = "1.13.1"
-backtrace = "0.3.74"
-env_logger = "0.11.6"
-futures-lite = "2.6.0"
-image = "0.25.5"
-log = "0.4.25"
-thiserror = "1"
-
-[dev-dependencies]
-rand = "0.9"
-
-[profile.dev]
-opt-level = 1
-
-[lints.clippy]
-missing_safety_doc = "allow"
-too_many_arguments = "allow"
+[workspace.dependencies]
+libloading = "0.8"
+bitflags = "2.8"
+paste = "1"
+vendec = { path = "crates/vendec" }
+vendec-libva-sys = { path = "crates/libva-sys" }
+vendec-libva = { path = "crates/libva" }
