--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,18 @@
 [workspace]
 resolver = "2"
-members = ["crates/libva", "crates/libva-sys", "crates/vendec"]
+members = [
+  "crates/libva",
+  "crates/libva-sys",
+  "crates/simple-vaapi",
+  "crates/vendec",
+]
 
 [workspace.dependencies]
-libloading = "0.8"
+anyhow = "1"
 bitflags = "2.8"
+image = "0.25"
+libloading = "0.8"
 paste = "1"
 vendec = { path = "crates/vendec" }
-vendec-libva-sys = { path = "crates/libva-sys" }
 vendec-libva = { path = "crates/libva" }
+vendec-libva-sys = { path = "crates/libva-sys" }
